--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.4",
+    "morgan": "^1.8.2",
     "nunjucks": "^3.0.1",
     "pg": "^7.1.0",
     "sequelize": "^4.4.2"
